--- a/WpfApp/packages.config
+++ b/WpfApp/packages.config
@@ -3,6 +3,9 @@
   <package id="Castle.Core" version="4.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net472" />
+  <package id="EPPlus" version="6.0.3" targetFramework="net472" />
+  <package id="EPPlus.Interfaces" version="6.0.0" targetFramework="net472" />
+  <package id="EPPlus.System.Drawing" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore" version="3.1.24" targetFramework="net472" />
@@ -19,6 +22,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.24" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="3.1.24" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.24" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net472" />
   <package id="Moq" version="4.17.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
